# agent-tools

./: .gitignore  AGENTS.md  LICENSE  README.md  setup.sh
.agent-tools/memory/: MEMORY.md  state.yml
.claude/: settings.json  settings.local.json
.claude/commands/: evolve.md
.claude/evolve/: history.md
.github/workflows/: ci.yml
commands/: README.md  commit-push-pr.md  commit-push.md  commit.md  fix.quality.md  spec.implement.md
commands/archive/: MIGRATION_NOTICE.md  spec.plan.md
commands/git/: commit-pr.md  commit-push.md  commit.md  worktree-create.md  worktree-delete.md
commands/product/: audit.md  brief.md  position.md
commands/qa/: audit.md  discover.md  setup.md
commands/qa-sentinel/: audit.md  discover.md  report.md  run.md  setup.md
commands/workflow/: audit-api.md  audit-code.md  audit-docs.md  audit-frontend.md  audit-memory.md  audit.md  (+8 more)
docs/: getting-started.md
planning/: agent-specific-content-audit-triage.md  conventions.md  handoff.md
tests/swarm/scenarios/cli-task-manager/seed/: README.md  pyproject.toml
tests/swarm/scenarios/cli-task-manager/seed/taskcli/: __init__.py  cli.py
tests/swarm/scenarios/cli-task-manager/seed/tests/: test_integration.py
tests/swarm/scenarios/greenfield-init/seed/: README.md  pyproject.toml
tests/swarm/scenarios/greenfield-init/seed/greeter/: __init__.py  cli.py
tests/swarm/scenarios/greenfield-init/seed/greeter/commands/: __init__.py  version.py
tests/swarm/scenarios/greenfield-init/seed/tests/: test_smoke.py
tools/: doc-lint-allowlist.txt  doc_lint.py  publish-skills.sh  pyproject.toml
(+498 files in other folders)
